# mkdocs-wordart

./: .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  taskfile.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bump.yml  pages.yml  pypi.yml
css/: wordart.css
docs/: how-to-use-it.md  index.md
how-to-use-it/: index.html
search/: search_index.json
src/mkdocs_wordart/: plugin.py
src/mkdocs_wordart/assets/: wordart.css
src/mkdocs_wordart/templates/: wordart.html
